# cli

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: cli-tester.md  docs-writer.md
.claude/commands/: add-command.md  brand-check.md  build.md  demo.md  deploy-check.md  dev.md  lint.md  nvidia-check.md  publish-prep.md  release.md  test.md
.claude/skills/: api-client.md  cli-command.md  rich-output.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
actions/: README.md
actions/deploy-agent/: README.md  action.yml
actions/sandbox-test/: README.md  action.yml
actions/trust-check/: README.md  action.yml  trust_check.py
docs/: BRAND-WORDS.md  DESIGN-SYSTEM.md
scripts/: demo.sh
src/ainfera/: __init__.py  __main__.py  cli.py
src/ainfera/api/: client.py
src/ainfera/commands/: agents.py  auth.py  billing.py  deploy.py  discover.py  gate.py  health.py  init.py  kill.py  login.py  logs.py  register.py  skill_scan.py  status.py  trust.py  trust_check.py
src/ainfera/config/: settings.py  yaml_parser.py
src/ainfera/sdk/: __init__.py  client.py
src/ainfera/ui/: console.py  formatters.py  themes.py
src/ainfera/utils/: detect.py  errors.py  git.py
tests/: conftest.py  test_config.py  test_deploy.py  test_init.py  test_smoke.py  test_trust.py
