[project]
name = "ainfera"
version = "0.6.1"
description = "CLI for the Ainfera AI agent infrastructure platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Ainfera", email = "hello@ainfera.ai"}]
maintainers = [{name = "Ainfera", email = "hello@ainfera.ai"}]
keywords = ["ai", "agents", "trust", "infrastructure", "cli"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.2.0"]
crewai = ["crewai>=0.30.0"]
openclaw = []
anthropic = ["anthropic>=0.25.0"]
openai = ["openai>=1.0.0"]
huggingface = ["huggingface-hub>=0.20.0"]
all = [
    "langchain>=0.2.0",
    "crewai>=0.30.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "huggingface-hub>=0.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
ainfera = "ainfera.cli:main"

[project.urls]
Homepage = "https://ainfera.ai"
Documentation = "https://api.ainfera.ai/docs"
Repository = "https://github.com/ainfera-ai/cli"
Changelog = "https://github.com/ainfera-ai/cli/blob/main/CHANGELOG.md"
Issues = "https://github.com/ainfera-ai/cli/issues"
Marketplace = "https://ainfera.ai/marketplace"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ainfera"]

[tool.ruff]
target-version = "py310"
